--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,5 +1,5 @@
 registerPoint: 10
-headPic: http://po994wwoh.bkt.clouddn.com/bird.jpeg
+headPic: http://ppyh63zd8.bkt.clouddn.com/bird.jpeg
 
 server:
   port: 9999 #项目端口
